Add Cleaner job to GraphvizEngine to close and clean the Javascript Engine properly